cambios en la navegacion de estadisticas y partidos

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
     <div class="column blue-light">
         <header class="font-0 w-100 zi-10 header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
+                <a href="" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
             BISLAI
             </a>
                 <div class="nav-grid-second display-ib--m">
-                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/partidos">PARTIDOS</a>
-
+                    <a class="pos-r font-bislai link letter-0-12--m white" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                    <a class="pos-r font-bislai link letter-0-12--m white" href="/partidos"><span class="link-name">PARTIDOS</span></a>
                 </div>
             </nav>
         </header>
@@ -39,20 +38,28 @@
                 </svg>
             </div>
         </div>
-        <div class="bislai-home-body-right">
-            <p class="bislai-home-body-right-text"><strong>Bislai</strong> muestra de una manera más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos políticos en el <strong>Ayuntamiento de Zaragoza.</strong></p>
-        <div class="padding-0__5-0">
-            <div class="pos-r">
-                <form action="http://bislai.co/buscador">
-                    <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                    <button class="btn-search" type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#2f17a9" />
-                        </svg>
-                    </button>
-                </form>
+        <div class="bislai-home-card">
+            <div class="bislai-home-card-element">
+                <p class="bislai-home-card-element-text">Mostramos de una manera más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos políticos en el <strong>Ayuntamiento de Zaragoza.</strong></p>
             </div>
-        </div>
+            <div class="bislai-home-card-element">
+                <p class="bislai-home-card-element-text">Busca en todos los plenos por cualquier palabra: ¿agua? ¿bus? ¿bicicleta?</p>
+                <div class="padding-0__5-0">
+                    <div class="pos-r">
+                        <form action="/buscador">
+                            <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                            <button class="btn-search" type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#2f17a9" />
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="bislai-home-card-element">
+                <p class="bislai-home-card-element-text">Recopilamos todas las votaciones y generamos diferentes estadísticas con ellas, tripartitos, quién vota a favor, quién vota en contra.</p>
+            </div>
         </div>
     </div>
     <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-4-0--l mih-100">
@@ -67,37 +74,37 @@
             <label class="label-record font-3 font-s" for="tab3">2017</label>
             <!-- ENERO -->
             <section class="tabla-calendario contenido1">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
             </section>
             <!-- FEBRERO -->
             <section class="tabla-calendario  contenido2">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/28-01-2016.html">28 de enero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/26-02-2016.html">26 de febrero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/23-03-2016.html">23 de marzo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/29-04-2016.html">29 de abril de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/27-05-2016.html">27 de mayo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/01-07-2016.html">1 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/22-07-2016.html">22 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/30-09-2016.html">30 de septiembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/28-10-2016.html">28 de octubre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/02-12-2016.html">2 de diciembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/23-12-2016.html">23 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/28-01-2016.html">28 de enero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/26-02-2016.html">26 de febrero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/23-03-2016.html">23 de marzo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/29-04-2016.html">29 de abril de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/27-05-2016.html">27 de mayo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/01-07-2016.html">1 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/22-07-2016.html">22 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/30-09-2016.html">30 de septiembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/28-10-2016.html">28 de octubre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/02-12-2016.html">2 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2016/23-12-2016.html">23 de diciembre de 2016</a>
             </section>
             <section class="tabla-calendario  contenido3">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/03-02-2017.html">3 de febrero de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/24-02-2017.html">24 de febrero de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/31-03-2017.html">31 de marzo de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/02-06-2017.html">2 de junio de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/30-06-2017.html">30 de junio de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/28-07-2017.html">28 de julio de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/29-09-2017.html">23 de septiembre de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/30-10-2017.html">30 de octubre de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/24-11-2017.html">24 de noviembre de 2017</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/22-12-2017.html">22 de diciembre de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/03-02-2017.html">3 de febrero de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/24-02-2017.html">24 de febrero de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/31-03-2017.html">31 de marzo de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/02-06-2017.html">2 de junio de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/30-06-2017.html">30 de junio de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/28-07-2017.html">28 de julio de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/29-09-2017.html">23 de septiembre de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/30-10-2017.html">30 de octubre de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/24-11-2017.html">24 de noviembre de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s black textd-n display-b " href="/plenos/2017/22-12-2017.html">22 de diciembre de 2017</a>
             </section>
         </article>
     </section>
@@ -109,17 +116,17 @@
         </div>
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
-        <div class="maw-60">
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CRÉDITOS</a>
-            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">TWITTER</a>
-            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GITHUB</a>
+        <div class="maw-60 grid-footer">
+            <a class="black font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
+            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/creditos">CRÉDITOS</a>
+            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">TWITTER</a>
+            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">GITHUB</a>
         </div>
-        <p class="maw-60 padding-1-0 luckyPoint">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
+
         <a class="maw-60 display-b" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
 
-    <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-
-        licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a>
+            <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a>
+            <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
