--- a/404.html
+++ b/404.html
@@ -13,12 +13,12 @@
 <body class="mih-100">
     <header class="font-0 border-b1 borderc-greyc w-100 zi-10 bgc-header-home">
         <nav class="padding-0__5-1 nav-grid">
-            <a href="http://bislai.co" class="textd-n pink font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
+            <a href="" class="textd-n pink font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
             BISLAI
             </a>
             <div class="w-100--m maw-70p--l padding-0__5-0">
                 <div class="pos-r">
-                    <form action="http://bislai.co/buscador">
+                    <form action="/buscador">
                         <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                         <button class="btn-search" type="submit">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -29,7 +29,8 @@
                 </div>
             </div>
             <div class="nav-grid-second display-ib--m">
-                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline pink vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+                <a class="pos-r font-bislai link letter-0-12--m" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                <a class="pos-r font-bislai link letter-0-12--m" href="/partidos"><span class="link-name">PARTIDOS</span></a>
             </div>
         </nav>
     </header>
@@ -59,11 +60,11 @@
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <div class="maw-60">
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CRÉDITOS</a>
+            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="/creditos">CRÉDITOS</a>
             <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">TWITTER</a>
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GITHUB</a>
         </div>
-        <p class="maw-60 padding-1-0 luckyPoint">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
+        <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         <a class="maw-60 display-b" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
 
     <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
