--- a/estadisticas.html
+++ b/estadisticas.html
@@ -14,16 +14,16 @@
     <div class="column blue-light">
         <header class="font-0 w-100 zi-10 header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
+                <a href="" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
             BISLAI
             </a>
                 <div class="nav-grid-second display-ib--m">
-                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/partidos">PARTIDOS</a>
+                    <a class="pos-r font-bislai link letter-0-12--m white" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                    <a class="pos-r font-bislai link letter-0-12--m white" href="/partidos"><span class="link-name">PARTIDOS</span></a>
                 </div>
             </nav>
         </header>
-        <img src="img/estadisticas3.jpeg"/>
+        <img src="img/estadisticas3.jpeg" />
         <div class="bislai-home-body-left-text">
             <span class="bislai-home-body-left-text-white font-bislai">ESTADÍSTICAS ACUMULADAS</span>
         </div>
@@ -40,43 +40,65 @@
         <div class='scroll__text'>
             <div class='step' data-step='1'>
                 <p class="title-estadisticas">¿Cuántas votaciones por unanimidad?</p>
-
                 <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">323 votaciones</span>, de las cuales, <span class="font-w8">181</span> se han votado por unanimidad.</p>
             </div>
             <div class='step' data-step='2'>
                 <p class="title-estadisticas">Los tripartitos del pleno</p>
                 <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
-                <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 55 votaciones.</span></p> <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">53 votaciones</span>.</p>
+                <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 55 votaciones.</span></p>
+                <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">53 votaciones</span>.</p>
             </div>
             <div class='step' data-step='3'>
                 <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
-                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 323 mociones, y se han retirado 30.</span></p><p> En primer lugar <span class="font-w8">C'S</span> con <span class="font-w8">76</span>.</p><p> En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">75</span>.</p><p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">74</span>.</p><p> En cuarto lugar <span class="font-w8">CHA</span> con <span class="font-w8">63</span>.</p><p> En quinto lugar  <span class="font-w8">ZEC</span> con <span class="font-w8">43</span>.</p>
+                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 323 mociones, y se han retirado 30.</span></p>
+                <p> En primer lugar <span class="font-w8">C'S</span> con <span class="font-w8">76</span>.</p>
+                <p> En segundo lugar el <span class="font-w8">PSOE</span> con <span class="font-w8">75</span>.</p>
+                <p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">74</span>.</p>
+                <p> En cuarto lugar <span class="font-w8">CHA</span> con <span class="font-w8">63</span>.</p>
+                <p> En quinto lugar <span class="font-w8">ZEC</span> con <span class="font-w8">43</span>.</p>
             </div>
             <div class='step' data-step='4'>
                 <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span> con 56.</span></p><p>En segundo lugar <span class="font-w8">C'S</span> con 45.<p>En tercer lugar <span class="font-w8">CHA</span> con 44.</p><p> En cuarto lugar el <span class="font-w8">PP</span> con 37.</p><p> En quinto lugar el <span class="font-w8">PSOE</span> con 24.</p>
+                <p>En primer lugar <span class="font-w8">ZEC</span> con 56.</span>
+                </p>
+                <p>En segundo lugar <span class="font-w8">C'S</span> con 45.
+                    <p>En tercer lugar <span class="font-w8">CHA</span> con 44.</p>
+                    <p> En cuarto lugar el <span class="font-w8">PP</span> con 37.</p>
+                    <p> En quinto lugar el <span class="font-w8">PSOE</span> con 24.</p>
             </div>
             <div class='step' data-step='5'>
                 <p class="title-estadisticas">¿Quién vota más en contra?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span> con 98.</p><p> En segundo lugar el <span class="font-w8">PP</span> con 93.</p> <p>En tercer lugar <span class="font-w8">CHA</span> con 63.</p><p> En cuarto lugar el <span class="font-w8">PSOE</span> con 48.</p><p> En quinto lugar <span class="font-w8">C'S</span> con 38.</p>
+                <p>En primer lugar <span class="font-w8">ZEC</span> con 98.</p>
+                <p> En segundo lugar el <span class="font-w8">PP</span> con 93.</p>
+                <p>En tercer lugar <span class="font-w8">CHA</span> con 63.</p>
+                <p> En cuarto lugar el <span class="font-w8">PSOE</span> con 48.</p>
+                <p> En quinto lugar <span class="font-w8">C'S</span> con 38.</p>
             </div>
             <div class='step' data-step='6'>
                 <p class="title-estadisticas">¿Quién vota más a favor?</p>
-                <p>En primer lugar <span class="font-w8">C'S</span> con 149.</p><p> En segundo lugar el <span class="font-w8">PSOE</span> con 143.</p><p> En tercer lugar <span class="font-w8">CHA</span> con 113.</p><p> En cuarto lugar el <span class="font-w8">PP</span> con 96.</p><p> En quinto lugar <span class="font-w8">ZEC</span> con 77.</p>
+                <p>En primer lugar <span class="font-w8">C'S</span> con 149.</p>
+                <p> En segundo lugar el <span class="font-w8">PSOE</span> con 143.</p>
+                <p> En tercer lugar <span class="font-w8">CHA</span> con 113.</p>
+                <p> En cuarto lugar el <span class="font-w8">PP</span> con 96.</p>
+                <p> En quinto lugar <span class="font-w8">ZEC</span> con 77.</p>
             </div>
             <div class='step' data-step='7'>
                 <p class="title-estadisticas">La soledad del pleno</p>
-                <p>En primer lugar el <span class="font-w8">PP</span> con 101.</p><p> En segundo lugar <span class="font-w8">ZEC</span> con 72.</p><p> En tercer lugar <span class="font-w8">C'S</span> con 50.</p><p> En cuarto lugar <span class="font-w8">CHA</span> con 96.</p><p> En quinto lugar el <span class="font-w8">PSOE</span> con 16.</p>
+                <p>En primer lugar el <span class="font-w8">PP</span> con 101.</p>
+                <p> En segundo lugar <span class="font-w8">ZEC</span> con 72.</p>
+                <p> En tercer lugar <span class="font-w8">C'S</span> con 50.</p>
+                <p> En cuarto lugar <span class="font-w8">CHA</span> con 96.</p>
+                <p> En quinto lugar el <span class="font-w8">PSOE</span> con 16.</p>
             </div>
         </div>
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <div class="maw-60">
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CRÉDITOS</a>
+            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="/creditos">CRÉDITOS</a>
             <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">TWITTER</a>
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GITHUB</a>
         </div>
-        <p class="maw-60 padding-1-0 luckyPoint">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
+        <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         <a class="maw-60 display-b" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
 
     <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
