--- a/partidos/ciudadanos.html
+++ b/partidos/ciudadanos.html
@@ -134,17 +134,17 @@
         </div>
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
-        <div class="maw-60">
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="/creditos">CRÉDITOS</a>
-            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">TWITTER</a>
-            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GITHUB</a>
+        <div class="maw-60 grid-footer">
+            <a class="black font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/">BISLAI · ACCESIBILIDAD POLÍTICA</a>
+            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai" href="/creditos">CRÉDITOS</a>
+            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">TWITTER</a>
+            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1 font-bislai">GITHUB</a>
         </div>
-        <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
+
         <a class="maw-60 display-b" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
 
-    <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-
-        licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a>
+            <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a>
+            <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
