--- a/estadisticas.html
+++ b/estadisticas.html
@@ -27,10 +27,18 @@
         <div class="bislai-home-body-left-text">
             <span class="bislai-home-body-left-text-white font-bislai">ESTADÍSTICAS ACUMULADAS</span>
         </div>
-        <div class="bislai-home-body-right">
-            <p class="font-1 margin-t1 bislai-home-body-right-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza, desde el <strong>15 de junio de 2015 hasta el 22 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
-            <p class="font-1 margin-t1 bislai-home-body-right-text">En la estadistica de votación a favor no se tiene en cuenta cuando un grupo vota a favor de su propia propuesta.</p>
-            <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
+        <div class="bislai-home-card">
+            <div class="bislai-home-card-element">
+                <p class="bislai-home-card-element-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones</span>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
+            </div>
+            <div class="bislai-home-card-element">
+                <p class="bislai-home-card-element-text">En la estadistica de votación a favor no se tiene en cuenta cuando un grupo vota a favor de su propia propuesta.</p>
+            </div>
+            <div class="bislai-home-card-element">
+                <p class="bislai-home-card-element-text">
+                    Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.
+                </p>
+            </div>
         </div>
     </div>
     <section id='scroll'>
@@ -40,7 +48,7 @@
         <div class='scroll__text'>
             <div class='step' data-step='1'>
                 <p class="title-estadisticas">¿Cuántas votaciones por unanimidad?</p>
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">323 votaciones</span>, de las cuales, <span class="font-w8">181</span> se han votado por unanimidad.</p>
+                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">486 votaciones</span>, de las cuales, <span class="font-w8">181</span> se han votado por unanimidad.</p>
             </div>
             <div class='step' data-step='2'>
                 <p class="title-estadisticas">Los tripartitos del pleno</p>
