--- a/estadisticas.html
+++ b/estadisticas.html
@@ -32,7 +32,7 @@
                 <p class="bislai-home-card-element-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones</span>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
             </div>
             <div class="bislai-home-card-element">
-                <p class="bislai-home-card-element-text">En la estadistica de votación a favor no se tiene en cuenta cuando un grupo vota a favor de su propia propuesta.</p>
+                <p class="bislai-home-card-element-text">En la estadística de votación a favor no se tiene en cuenta cuando un grupo vota a favor de su propia propuesta.</p>
             </div>
             <div class="bislai-home-card-element">
                 <p class="bislai-home-card-element-text">
