--- a/estadisticas.html
+++ b/estadisticas.html
@@ -14,7 +14,7 @@
     <div class="column blue-light">
         <header class="font-0 w-100 zi-10 header-home">
             <nav class="nav-grid">
-                <a href="" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
+                <a href="http://bislai.co" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
             BISLAI
             </a>
                 <div class="nav-grid-second display-ib--m">
