--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <div class="column blue-light">
         <header class="font-0 w-100 zi-10 header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
-            BISLAI
-            </a>
+                <a href="http://bislai.co" class="link font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first"><span class="link-name">BISLAI</span></a>
                 <div class="nav-grid-second display-ib--m">
                     <a class="pos-r font-bislai link letter-0-12--m white" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
                     <a class="pos-r font-bislai link letter-0-12--m white" href="/partidos"><span class="link-name">PARTIDOS</span></a>
