--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         </div>
         <div class="bislai-home-card">
             <div class="bislai-home-card-element">
+                <h3 class="bislai-home-card-title">ACCESIBILIDAD</h3>
                 <p class="bislai-home-card-element-text">Mostramos de una manera más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos políticos en el <strong>Ayuntamiento de Zaragoza.</strong></p>
             </div>
             <div class="bislai-home-card-element">
+                <h3 class="bislai-home-card-title">BUSCADOR</h3>
                 <p class="bislai-home-card-element-text">Busca en todos los plenos por cualquier palabra: ¿agua? ¿bus? ¿bicicleta?</p>
                 <div class="padding-0__5-0">
                     <div class="pos-r">
@@ -56,7 +58,8 @@
                 </div>
             </div>
             <div class="bislai-home-card-element">
-                <p class="bislai-home-card-element-text">Recopilamos todas las votaciones y generamos diferentes estadísticas con ellas, tripartitos, quién vota a favor, quién vota en contra.</p>
+                <h3 class="bislai-home-card-title">ESTADÍSTICAS</h3>
+                <p class="bislai-home-card-element-text">Recopilamos todas las votaciones y generamos diferentes estadísticas con ellas: tripartitos, ¿quién vota a favor?, ¿quién vota en contra?</p>
             </div>
         </div>
     </div>
