--- a/estadisticas.html
+++ b/estadisticas.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -65,7 +64,7 @@
             </div>
             <div class='step' data-step='4'>
                 <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span> con 56.</span>
+                <p>En primer lugar <span class="font-w8">ZEC</span> con 52.</span>
                 </p>
                 <p>En segundo lugar <span class="font-w8">C'S</span> con 45.
                     <p>En tercer lugar <span class="font-w8">CHA</span> con 44.</p>
@@ -90,6 +89,7 @@
             </div>
             <div class='step' data-step='7'>
                 <p class="title-estadisticas">La soledad del pleno</p>
+                <p>El número de veces que cada partido ha votado en solitario.</p>
                 <p>En primer lugar el <span class="font-w8">PP</span> con 101.</p>
                 <p> En segundo lugar <span class="font-w8">ZEC</span> con 72.</p>
                 <p> En tercer lugar <span class="font-w8">C'S</span> con 50.</p>
